feat: add i18n support with next-translate

--- a/frontend/locales/en/common.json
+++ b/frontend/locales/en/common.json
@@ -8,5 +8,7 @@
 
 
   "english": "English",
-  "greek": "Ελληνικά"
+  "greek": "Ελληνικά",
+  "alertsError": "Could not load alerts. Please try again later.",
+  "searchPlaceholder": "Search stops"
 }
