--- a/frontend/locales/el/common.json
+++ b/frontend/locales/el/common.json
@@ -8,5 +8,7 @@
 
 
   "english": "English",
-  "greek": "Ελληνικά"
+  "greek": "Ελληνικά",
+  "alertsError": "Δεν ήταν δυνατή η φόρτωση ειδοποιήσεων. Παρακαλώ προσπαθήστε ξανά αργότερα.",
+  "searchPlaceholder": "Αναζήτηση στάσεων"
 }
