feat: cache api responses in service worker

--- a/frontend/public/locales/el/common.json
+++ b/frontend/public/locales/el/common.json
@@ -6,6 +6,8 @@
   "loadingVehicles": "Φόρτωση οχημάτων...",
   "noVehicles": "Δεν υπάρχουν διαθέσιμα οχήματα",
 
+  "offlineData": "Τα δεδομένα χωρίς σύνδεση ενδέχεται να είναι παρωχημένα",
+
 
   "english": "English",
   "greek": "Ελληνικά"
