--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -6,6 +6,8 @@
   "loadingVehicles": "Loading vehicles...",
   "noVehicles": "No vehicles available",
 
+  "offlineData": "Offline data may be outdated",
+
 
   "english": "English",
   "greek": "Ελληνικά"
